--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.8.1",
     "cors": "^2.8.5",
     "express": "^5.1.0"
   }
