--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
